<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_3sdp"
    android:foreground="?android:attr/selectableItemBackgroundBorderless"
    android:outlineAmbientShadowColor="@color/colorPrimary"
    android:outlineSpotShadowColor="@color/colorPrimary"
    app:cardCornerRadius="20dp"
    app:cardElevation="@dimen/_3sdp"
    app:cardMaxElevation="@dimen/_3sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sel_order"
                android:fontFamily="@font/jazera"
                android:text="TextView"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sel_order"
                android:fontFamily="@font/jazera"
                android:text="TextView"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sel_order"
                android:fontFamily="@font/jazera"
                android:text="TextView"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:layout_marginTop="@dimen/margin_top"
            android:rowCount="2">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"

                android:fontFamily="@font/jazera"
                android:gravity="center"
                android:text="@string/name_hint"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:fontFamily="@font/jazera"
                android:gravity="center"
                android:text="@string/total"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:fontFamily="@font/jazera"
                android:gravity="center"
                android:text="@string/Status"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/applicant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:fontFamily="@font/jazera"
                android:gravity="center"
                android:paddingTop="@dimen/_4sdp"
                android:text="TextView"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:fontFamily="@font/jazera"
                android:gravity="center"
                android:paddingTop="@dimen/_4sdp"
                android:text="TextView"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:fontFamily="@font/jazera"
                android:gravity="center"
                android:paddingTop="@dimen/_4sdp"
                android:text="TextView"
                android:textSize="@dimen/_12ssp" />
        </GridLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cusrom_order_list_btn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="@font/jazera"
            android:text="@string/view"
            app:cornerRadius="@dimen/_15sdp" />
    </LinearLayout>


</androidx.cardview.widget.CardView>